# WorkoAI-Assignment

./: README.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/services/: ai_service.py  pdf_parser.py
frontend/: index.html
frontend/src/: App.jsx  api.js  index.css
